--- a/argocd-helm-charts/capi-cluster/charts/aws/values.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/values.yaml
@@ -1,10 +1,32 @@
-workerNodes:
-  maxSize: 3
-  minSize: 1
-  ami:
-    id: ami-03cd26c84ae9a587c
-  publicIP: false
+secretName: capi-cluster-token
+sshKeyName: kubeaid-demo
+region: us-east-2
+bastion:
+  enabled: true
+vpc:
+  cidrBlock: 10.14.0.0/22
+pods:
+  cidrBlock: 10.244.0.0/16
+
 controlPlane:
+  loadBalancerType: nlb
+  region: us-east-2
+  replicas: 1
+  instanceType: t2.medium
   ami:
-    id: ami-03cd26c84ae9a587c
-  publicIP: true
+    id: ami-05145146e3a9db6f3
+
+machinePools:
+  - name: primary
+    replicas: 1
+    region: us-east-2
+    instanceType: t2.medium
+    sshKeyName: kubeaid-demo
+    ami:
+      id: ami-05145146e3a9db6f3
+  - name: secondary
+    replicas: 1
+    instanceType: t2.medium
+    sshKeyName: kubeaid-demo
+    ami:
+      id: ami-05145146e3a9db6f3
