chore: Rename middleware.yaml to puppetdb-middlewaretcp.yaml
Signed-off-by: Shubham Gupta <sgupta@obmondo.com>

--- a/argocd-helm-charts/puppetserver/templates/puppetdb-middlewaretcp.yaml
+++ b/argocd-helm-charts/puppetserver/templates/puppetdb-middlewaretcp.yaml
@@ -1,5 +1,5 @@
 apiVersion: traefik.io/v1alpha1
-kind: Middleware
+kind: MiddlewareTCP
 metadata:
   name: middleware-{{ .Values.customerid }}
 spec:
