Adding support for user specified labels for a MachinePool
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
@@ -9,6 +9,12 @@ spec:
   clusterName: {{ $.Values.global.clusterName }}
   replicas: {{ $machinePool.replicas }}
   template:
+    metadata:
+      labels:
+        machine-pool: {{ printf "%s-%s" $.Values.global.clusterName $machinePool.name }}
+        {{- if $machinePool.labels }}
+        {{- toYaml $machinePool.labels | nindent 8 }}
+        {{- end }}
     spec:
       bootstrap:
         configRef:
