chore: Update middleware name to puppetdb-middlewaretcp.yaml (#398)
Signed-off-by: Shubham Gupta <sgupta@obmondo.com>
Reviewed-on: https://gitea.obmondo.com/EnableIT/KubeAid/pulls/398

--- a/argocd-helm-charts/puppetserver/templates/puppetdb-ingressroutetcp.yaml
+++ b/argocd-helm-charts/puppetserver/templates/puppetdb-ingressroutetcp.yaml
@@ -12,7 +12,7 @@ spec:
     - name: puppetserver-{{ .Values.customerid }}-puppetdb
       port: pdb-https
     middlewares:
-      - name: middleware-{{ .Values.customerid }}
+      - name: middlewaretcp-{{ .Values.customerid }}
   tls:
     passthrough: true
     options:
