--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
@@ -20,7 +20,7 @@ spec:
         configRef:
           apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
           kind: KubeadmConfig
-          name: {{ $.Values.global.clusterName }}
+          name: {{ printf "%s-%s" $.Values.global.clusterName $machinePool.name }}
       clusterName: {{ $.Values.global.clusterName }}
       infrastructureRef:
         apiVersion: infrastructure.cluster.x-k8s.io/v1beta2
