[CI] Helm Chart Update teleport-kube-agent

--- a/argocd-helm-charts/teleport-kube-agent/charts/teleport-kube-agent/templates/statefulset.yaml
+++ b/argocd-helm-charts/teleport-kube-agent/charts/teleport-kube-agent/templates/statefulset.yaml
@@ -151,6 +151,10 @@ spec:
           - name: TELEPORT_EXT_UPGRADER_VERSION
             value: {{ include "teleport-kube-agent.version" . }}
           {{- end }}
+          {{- if .Values.clusterDomain }}
+          - name: TELEPORT_KUBE_CLUSTER_DOMAIN
+            value: {{ .Values.clusterDomain | quote }}
+          {{- end }}
           {{- if .Values.tls.existingCASecretName }}
           - name: SSL_CERT_FILE
             value: /etc/teleport-tls-ca/ca.pem
