Using user specified secret name instead of capi-cluster-token in AWS InfrastructureProvider
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: capi-cluster-{{ .Values.global.customerid }}
 spec:
   configSecret:
-    name: capi-cluster-token
+    name: {{ .Values.provider.aws.secretName }}
     namespace: capi-cluster-{{ .Values.global.customerid }}
   version: {{ .Values.global.capa.version }}
   fetchConfig:
