--- a/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/config/gateway.yaml
+++ b/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/config/gateway.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if eq .Values.app.mode "dashboard" }}
+{{- if and (eq .Values.app.mode "dashboard") (.Values.kong.enabled) }}
 
 apiVersion: v1
 kind: ConfigMap
