[CI] Helm Chart Update teleport-cluster

--- a/argocd-helm-charts/teleport-cluster/charts/teleport-cluster/charts/teleport-operator/values.yaml
+++ b/argocd-helm-charts/teleport-cluster/charts/teleport-cluster/charts/teleport-operator/values.yaml
@@ -180,7 +180,7 @@ tls:
   # certs in the same namespace as the Teleport Kubernetes Operator using a
   # command such as:
   #
-  # ```shell
+  # ```code
   # $ kubectl create secret generic my-root-ca --from-file=ca.pem=/path/to/root-ca.pem
   # ```
   existingCASecretName: ""
