--- a/argocd-helm-charts/teleport-kube-agent/charts/teleport-kube-agent/templates/delete_hook.yaml
+++ b/argocd-helm-charts/teleport-kube-agent/charts/teleport-kube-agent/templates/delete_hook.yaml
@@ -73,6 +73,15 @@ spec:
   template:
     metadata:
       name: {{ .Release.Name }}-delete-hook
+{{- if .Values.annotations.pod }}
+      annotations:
+  {{- toYaml .Values.annotations.pod | nindent 8 }}
+{{- end }}
+      labels:
+        app: {{ .Release.Name }}
+{{- if .Values.extraLabels.pod }}
+  {{- toYaml .Values.extraLabels.pod | nindent 8 }}
+{{- end }}
     spec:
 {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
