--- a/argocd-helm-charts/teleport-kube-agent/charts/teleport-kube-agent/tests/job_test.yaml
+++ b/argocd-helm-charts/teleport-kube-agent/charts/teleport-kube-agent/tests/job_test.yaml
@@ -251,3 +251,21 @@ tests:
           apiVersion: rbac.authorization.k8s.io/v1
       - matchSnapshot:
           path: spec.template.spec
+
+  - it: should contain pod labels in the Job's pod spec if extraLabels.pod is set
+    template: delete_hook.yaml
+    # documentIndex: 0=ServiceAccount 1=Role 2=RoleBinding 3=Job
+    documentIndex: 3
+    values:
+      - ../.lint/backwards-compatibility.yaml
+    set:
+      extraLabels:
+        pod:
+          testLabel: testValue
+    asserts:
+      - equal:
+          path: spec.template.metadata.labels
+          value:
+            app: RELEASE-NAME
+            testLabel: testValue
+    
