--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmConfig.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmConfig.yaml
@@ -11,5 +11,8 @@ spec:
       kubeletExtraArgs:
         cloud-provider: external
       name: '{{"{{"}} ds.meta_data.local_hostname {{"}}"}}'
+      {{- if $machinePool.taints }}
+      taints: {{- toYaml $machinePool.taints | nindent 8 }}
+      {{- end }}
 {{- end }}
 {{- end }}
