--- a/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/deployment.yaml
+++ b/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/deployment.yaml
@@ -175,6 +175,9 @@ spec:
       topologySpreadConstraints:
 {{ toYaml .Values.topologySpreadConstraints | indent 8 }}
     {{- end }}
+    {{- if .Values.runtimeClassName }}
+      runtimeClassName: {{ .Values.runtimeClassName | quote }}
+    {{- end }}
     {{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
