--- a/argocd-helm-charts/haproxy/charts/haproxy/values.yaml
+++ b/argocd-helm-charts/haproxy/charts/haproxy/values.yaml
@@ -31,7 +31,7 @@ serviceAccount:
 ## Default values for image
 image:
   repository: haproxytech/haproxy-alpine    # can be changed to use CE or EE images
-  tag: "{{ .Chart.AppVersion }}"
+  tag: ""                                   # overrides the image tag whose default is the chart appVersion
   pullPolicy: IfNotPresent
 
 ## Automatically Roll Deployments
@@ -196,6 +196,13 @@ extraEnvs: []
 #   valueFrom:
 #     fieldRef:
 #       fieldPath: status.podIP
+
+## Use envFrom to add env vars from a secret or ConfigMap to the HAProxy container
+## ref: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
+extraEnvFrom: []
+## Example passing the pod IP into a container
+#  - configMapRef:
+#      name: ha-env-config
 
 ## Additional volumeMounts to the controller main container
 extraVolumeMounts: []
