[CI] Helm Chart Update traefik

--- a/argocd-helm-charts/traefik/charts/traefik/Chart.yaml
+++ b/argocd-helm-charts/traefik/charts/traefik/Chart.yaml
@@ -1,10 +1,9 @@
 annotations:
-  artifacthub.io/changes: "- \"fix(Traefik Hub): update CRDs to v1.5.0\"\n- \"fix(HTTP3):
-    split udp and tcp Service when service.single is false\"\n- \"fix!: \U0001F41B
-    set allowEmptyServices to true by default\"\n- \"feat(Traefik Hub): update CRDs
-    to v1.7.0\"\n- \"chore(release): \U0001F680 publish v31.0.0\"\n"
+  artifacthub.io/changes: "- \"fix: \U0001F41B updateStrategy behavior\"\n- \"feat(deps):
+    update traefik docker tag to v3.1.4\"\n- \"chore(release): \U0001F680 publish
+    v31.1.1\"\n"
 apiVersion: v2
-appVersion: v3.1.2
+appVersion: v3.1.4
 description: A Traefik based Kubernetes ingress controller
 home: https://traefik.io/
 icon: https://raw.githubusercontent.com/traefik/traefik/v2.3/docs/content/assets/img/traefik.logo.png
@@ -26,4 +25,4 @@ sources:
 - https://github.com/traefik/traefik
 - https://github.com/traefik/traefik-helm-chart
 type: application
-version: 31.0.0
+version: 31.1.1
