--- a/argocd-helm-charts/zfs-localpv/charts/zfs-localpv/templates/zfs-controller.yaml
+++ b/argocd-helm-charts/zfs-localpv/charts/zfs-localpv/templates/zfs-controller.yaml
@@ -24,6 +24,16 @@ spec:
         {{ toYaml . | nindent 8 }}
         {{- end}}
     spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - openebs-zfs-controller
+            topologyKey: "kubernetes.io/hostname"
 {{- if .Values.zfsController.priorityClass.create }}
       priorityClassName: {{ template "zfslocalpv.zfsController.priorityClassName" . }}
 {{- end }}
@@ -118,9 +128,17 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
             - name: OPENEBS_IO_INSTALLER_TYPE
-              value: "zfs-localpv-helm"
+              value: "{{ if (not (hasKey .Values.analytics "installerType")) }}zfs-localpv-helm{{ else }}{{ .Values.analytics.installerType }}{{ end }}"
             - name: OPENEBS_IO_ENABLE_ANALYTICS
               value: "{{ .Values.analytics.enabled }}"
+            {{- if .Values.analytics.gaId }}
+            - name: GA_ID
+              value: {{ .Values.analytics.gaId | quote }}
+            {{- end }}
+            {{- if .Values.analytics.gaKey }}
+            - name: GA_KEY
+              value: {{ .Values.analytics.gaKey | quote }}
+            {{- end }}
           args :
             - "--endpoint=$(OPENEBS_CSI_ENDPOINT)"
             - "--plugin=$(OPENEBS_CONTROLLER_DRIVER)"
