Fix template to allow custom ingressClass for http solver in cert-manager https://gitea.obmondo.com/EnableIT/qd2xcggwag/issues/449

--- a/argocd-helm-charts/cert-manager/templates/clusterissuer.yaml
+++ b/argocd-helm-charts/cert-manager/templates/clusterissuer.yaml
@@ -54,7 +54,7 @@ spec:
     {{- else if eq (toString $v.type) "http"}}
     - http01:
         ingress:
-          class: traefik-cert-manager
+          class: {{ $v.http01.ingress.ingressClassName }}
     {{- end -}}
     {{- end }}
 {{- else -}}
