--- a/argocd-helm-charts/argo-cd/charts/argo-cd/templates/redis-secret-init/job.yaml
+++ b/argocd-helm-charts/argo-cd/charts/argo-cd/templates/redis-secret-init/job.yaml
@@ -28,7 +28,7 @@ spec:
         {{- end }}
       {{- end }}
     spec:
-      {{- with .Values.global.imagePullSecrets }}
+      {{- with .Values.redisSecretInit.imagePullSecrets | default .Values.global.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
