--- a/argocd-helm-charts/mariadb-operator/charts/mariadb-operator/values.yaml
+++ b/argocd-helm-charts/mariadb-operator/charts/mariadb-operator/values.yaml
@@ -1,6 +1,14 @@
 nameOverride: ""
 fullnameOverride: ""
 
+# --- CRDs
+crds:
+  # -- Whether the helm chart should create and update the CRDs. It is false by default, which implies that the CRDs must be
+  # managed independently with the mariadb-operator-crds helm chart.
+  # **WARNING** This should only be set to true during the initial deployment. If this chart manages the CRDs
+  # and is later uninstalled, all MariaDB instances will be DELETED.
+  enabled: false
+
 image:
   repository: docker-registry3.mariadb.com/mariadb-operator/mariadb-operator
   pullPolicy: IfNotPresent
@@ -13,6 +21,9 @@ logLevel: INFO
 
 # -- Cluster DNS name
 clusterName: cluster.local
+
+# -- Whether the operator should watch CRDs only in its own namespace or not.
+currentNamespaceOnly: false
 
 ha:
   # -- Enable high availability
@@ -96,6 +107,8 @@ tolerations: []
 affinity: {}
 
 webhook:
+  # -- Specifies whether the webhook should be created.
+  enabled: true
   image:
     repository: docker-registry3.mariadb.com/mariadb-operator/mariadb-operator
     pullPolicy: IfNotPresent
