--- a/argocd-helm-charts/oncall/charts/oncall/charts/redis/Chart.yaml
+++ b/argocd-helm-charts/oncall/charts/oncall/charts/redis/Chart.yaml
@@ -1,38 +1,28 @@
 annotations:
   category: Database
-  images: |
-    - name: kubectl
-      image: docker.io/bitnami/kubectl:1.31.0-debian-12-r1
-    - name: os-shell
-      image: docker.io/bitnami/os-shell:12-debian-12-r27
-    - name: redis
-      image: docker.io/bitnami/redis:7.4.0-debian-12-r2
-    - name: redis-exporter
-      image: docker.io/bitnami/redis-exporter:1.62.0-debian-12-r3
-    - name: redis-sentinel
-      image: docker.io/bitnami/redis-sentinel:7.4.0-debian-12-r1
-  licenses: Apache-2.0
 apiVersion: v2
-appVersion: 7.4.0
+appVersion: 6.2.7
 dependencies:
 - name: common
-  repository: oci://registry-1.docker.io/bitnamicharts
+  repository: https://charts.bitnami.com/bitnami
   tags:
   - bitnami-common
-  version: 2.x.x
+  version: 1.x.x
 description: Redis(R) is an open source, advanced key-value store. It is often referred
   to as a data structure server since keys can contain strings, hashes, lists, sets
   and sorted sets.
-home: https://bitnami.com
+home: https://github.com/bitnami/charts/tree/master/bitnami/redis
 icon: https://bitnami.com/assets/stacks/redis/img/redis-stack-220x234.png
 keywords:
 - redis
 - keyvalue
 - database
 maintainers:
-- name: Broadcom, Inc. All Rights Reserved.
+- name: Bitnami
   url: https://github.com/bitnami/charts
+- email: cedric@desaintmartin.fr
+  name: desaintmartin
 name: redis
 sources:
-- https://github.com/bitnami/charts/tree/main/bitnami/redis
-version: 20.0.5
+- https://github.com/bitnami/bitnami-docker-redis
+version: 16.13.2
