--- a/argocd-helm-charts/oncall/charts/oncall/charts/redis/charts/common/Chart.yaml
+++ b/argocd-helm-charts/oncall/charts/oncall/charts/redis/charts/common/Chart.yaml
@@ -1,11 +1,10 @@
 annotations:
   category: Infrastructure
-  licenses: Apache-2.0
 apiVersion: v2
-appVersion: 2.22.0
+appVersion: 1.16.0
 description: A Library Helm Chart for grouping common logic between bitnami charts.
   This chart is not deployable by itself.
-home: https://bitnami.com
+home: https://github.com/bitnami/charts/tree/master/bitnami/common
 icon: https://bitnami.com/downloads/logos/bitnami-mark.png
 keywords:
 - common
@@ -14,10 +13,11 @@ keywords:
 - function
 - bitnami
 maintainers:
-- name: Broadcom, Inc. All Rights Reserved.
+- name: Bitnami
   url: https://github.com/bitnami/charts
 name: common
 sources:
-- https://github.com/bitnami/charts/tree/main/bitnami/common
+- https://github.com/bitnami/charts
+- https://www.bitnami.com/
 type: library
-version: 2.22.0
+version: 1.16.0
