Change deployment.revisionHistoryLimit type to int from string for Traefik KubeAid app
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/traefik/values.yaml
+++ b/argocd-helm-charts/traefik/values.yaml
@@ -17,7 +17,7 @@ traefik:
   globalArguments: []
   deployment:
     replicas: 2
-    revisionHistoryLimit: "0"
+    revisionHistoryLimit: 0
   logs:
     access:
       enabled: true
