MachinePool annotation required for the AWS native autoscaler to autoscale it
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachinePool.yaml
@@ -5,6 +5,8 @@ apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachinePool
 metadata:
   name: {{ printf "%s-%s" $.Values.global.clusterName $machinePool.name }}
+  annotations:
+    cluster.x-k8s.io/replicas-managed-by: external-autoscaler
 spec:
   clusterName: {{ $.Values.global.clusterName }}
   replicas: {{ $machinePool.replicas }}
