--- a/argocd-helm-charts/fluent-bit/charts/fluent-bit/Chart.yaml
+++ b/argocd-helm-charts/fluent-bit/charts/fluent-bit/Chart.yaml
@@ -1,9 +1,9 @@
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Made fluent-bit grafana dashboard uid configurable"
+      description: "Updated Fluent Bit OCI image to v3.1.9"
 apiVersion: v1
-appVersion: 3.1.7
+appVersion: 3.1.9
 description: Fast and lightweight log processor and forwarder or Linux, OSX and BSD
   family operating systems.
 home: https://fluentbit.io/
@@ -24,4 +24,4 @@ maintainers:
 name: fluent-bit
 sources:
 - https://github.com/fluent/fluent-bit/
-version: 0.47.9
+version: 0.47.10
